# lizard

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  NOTES.md  README.md  TODO.md
.clangd/index/: main.cpp.826E79A2975AB01B.idx
.github/workflows/: build.yml  checks.yml  post_static_analysis.yml  pr_checks.yml  static_analysis.yml
benchmarks/: CMakeLists.txt  ExpressionTree.cpp
cmake/: FindFilesystem.cmake  compiler.cmake  register_lizard_target.cmake  setup_dependencies.cmake  setup_tools.cmake
cmake/antlr4/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
docs/: README.md
grammars/: CMakeLists.txt  GeCCoExport.g4  TensorSymmetry.g4
include/lizard/core/: BitOperations.hpp  ConstexprMath.hpp  CumulativeSize.hpp  DepthFirst.hpp  Exception.hpp  Expression.hpp  ExpressionCardinality.hpp  ExpressionException.hpp  ExpressionOperator.hpp  ExpressionTree.hpp  ExpressionType.hpp  Expression_fwd.hpp  Fraction.hpp  MultiEnum.hpp  Node.hpp  Numeric.hpp  SignedCast.hpp  SizedStorage.hpp  TreeTraversal.hpp  Utils.hpp  VariadicHelpers.hpp  type_traits.hpp
include/lizard/core/details/: ExpressionTreeIteratorCore.hpp
include/lizard/format/: FormatException.hpp  FormatSupport.hpp  IndexFormatter.hpp  IndexSpaceFormatter.hpp  NamedTensorExprTreeFormatter.hpp  TensorBlockFormatter.hpp  TensorElementFormatter.hpp  TensorExprFormatter.hpp  TensorExprTreeFormatter.hpp
include/lizard/format/details/: Exceptions.hpp  IndexSpaceFormatter.hpp  Strategy.hpp  SymbolicFormatter.hpp  Tensor.hpp
include/lizard/parser/: GeCCoExportParser.hpp  ParseException.hpp  TensorSymmetryParser.hpp
include/lizard/process/: ExportException.hpp  ExportStrategy.hpp  HardcodedImport.hpp  ITFExport.hpp  ImportException.hpp  ImportStrategy.hpp  OptimizationStrategy.hpp  ProcessingException.hpp  ProcessingStep.hpp  Processor.hpp  ReporterConfig.hpp  RewriteStrategy.hpp  SkeletonQuantityMapper.hpp  SpinIntegration.hpp  SpinIntegrationStrategy.hpp  SpinProcessingStrategy.hpp  SpinSummationStrategy.hpp  Strategy.hpp  StrategyType.hpp  SubstitutionStrategy.hpp  TextExport.hpp
include/lizard/symbolic/: Contraction.hpp  DepthFirst.hpp  Expression.hpp  ExpressionCardinality.hpp  ExpressionException.hpp  ExpressionTree.hpp  Expression_fwd.hpp  Index.hpp  IndexSpace.hpp  IndexSpaceData.hpp  IndexSpaceManager.hpp  IndexType.hpp  InvalidIndexSpaceException.hpp  NamedExpressionTree.hpp  Spin.hpp  Tensor.hpp  TensorBlock.hpp  TensorElement.hpp  TensorExpressions.hpp  TreeNode.hpp  TreeTraversal.hpp
include/lizard/symbolic/details/: ExpressionTreeIteratorCore.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  DepthFirst.cpp  Exception.cpp  Expression.cpp  ExpressionOperator.cpp  ExpressionType.cpp  Fraction.cpp  Node.cpp  SignedCast.cpp  TreeTraversal.cpp
src/format/: CMakeLists.txt
src/parser/: CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.hpp  GeCCoExportParser.cpp  GeCCoExportProcessor.cpp  GeCCoExportProcessor.hpp  TensorSymmetryParser.cpp
src/process/: CMakeLists.txt  EnumStreamOperators.cpp  ExportStrategy.cpp  HardcodedImport.cpp  ITFExport.cpp  ImportStrategy.cpp  IndexTracker.cpp  IndexTracker.hpp  OptimizationStrategy.cpp  ProcessingStep.cpp  Processor.cpp  ReporterConfig.cpp  SkeletonQuantityMapper.cpp  SpinIntegration.cpp  SpinIntegrationStrategy.cpp  SpinLSE.cpp  SpinLSE.hpp  SpinProcessingStrategy.cpp  SpinSummationStrategy.cpp  Strategy.cpp  SubstitutionStrategy.cpp  SymmetryUtils.cpp  SymmetryUtils.hpp  TextExport.cpp
src/process/itf/: Alloc.cpp  Alloc.hpp  Contract.cpp  Contract.hpp  Drop.cpp  Drop.hpp  Load.cpp  Load.hpp  Multiplyable.cpp  Multiplyable.hpp  Operation.hpp  Store.cpp  Store.hpp  TensorExpression.cpp  TensorExpression.hpp  TensorFormatter.hpp  Translator.cpp  Translator.hpp
src/symbolic/: CMakeLists.txt  Contraction.cpp  DepthFirst.cpp  EnumStreamOperators.cpp  Index.cpp  IndexSpace.cpp  IndexSpaceData.cpp  IndexSpaceManager.cpp  Tensor.cpp  TensorBlock.cpp  TensorElement.cpp  TreeNode.cpp
tests/: CMakeLists.txt
tests/core/: BitOperationsTest.cpp  CMakeLists.txt  ExpressionTest.cpp  ExpressionTreeTest.cpp  FractionTest.cpp  MetaprogrammingTest.cpp  MultiEnumTest.cpp  SignedCastTest.cpp  SizedStorageTest.cpp
tests/format/: CMakeLists.txt  FormatTest.cpp
tests/parser/: CMakeLists.txt  ParserTest.cpp
tests/process/: CMakeLists.txt  PrettyPrint.hpp  SkeletonQuantityMapperTest.cpp  SpinIntegrationTest.cpp  SpinLSETest.cpp  Utils.hpp  UtilsTest.cpp
tests/symbolic/: CMakeLists.txt  ContractionTest.cpp  ExpressionTreeTest.cpp  IndexSpaceManagerTest.cpp  IndexSpaceTest.cpp  IndexTest.cpp  TensorBlockTest.cpp  TensorElementTest.cpp  TensorTest.cpp  Utils.hpp
tests/test_files/parser_input/GeCCoExport/invalid/: icMRCC_ENERGY.EXPORT  icMRCC_RES1.EXPORT  icMRCC_RES2.EXPORT
tests/test_files/parser_input/TensorSymmetry/invalid/: invalid1.symmetry  invalid2.symmetry  invalid3.symmetry
tests/test_files/parser_input/TensorSymmetry/valid/: example.symmetry
